k8s/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: service-mesh
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 150m
          memory: 200Mi
