k8s/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: webapi-gateway
  namespace: service-mesh
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
