k8s/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapi
  namespace: service-mesh
spec:
  host: webapi
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
