k8s/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapi
spec:
  hosts:
    - webapi
  http:
    - route:
        - destination:
            host: webapi
            subset: v1
          weight: 10
        - destination:
            host: webapi
            subset: v2
          weight: 90
